fix layout issues caused by mui's responsive styling

--- a/packages/veritone-react-common/src/components/DiscoverySideBar/styles/header.scss
+++ b/packages/veritone-react-common/src/components/DiscoverySideBar/styles/header.scss
@@ -22,6 +22,15 @@
   .muiTabsFlexContainerOverride {
     height: 46px;
   }
+
+  // hack: get rid of material-ui's responsive scaling of tabs
+  .muiTabButtonRootOverride {
+    min-width: initial;
+  }
+
+  .muiTabButtonLabelOverride {
+    font-size: 14px;
+  }
 }
 
 .singleTabContainer {
